--- a/src/components/Display/DisplayCommon.module.scss
+++ b/src/components/Display/DisplayCommon.module.scss
@@ -4,7 +4,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  background-color: rgba(86, 164, 86,0.1);
+  margin-left: 12px;
+  margin-right: 12px;
+  border-radius: 12px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.iconBox{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 12px;
+  margin-right: 12px;
+  border-radius: 12px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+.img{
+  border-radius: 20px;
+  height:200px;
+  width:200px;
+  object-fit: cover;
+  margin-bottom: 12px;
+  border: 2px solid green;
 }
 .title {
   font-size: 22px;
@@ -14,6 +38,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+}
+.bar{
+  height: 4px;
+  width:100px;
+  margin-bottom: 12px;
+  background-color: green;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.imgBar{
+  height: 4px;
+  width:100px;
+  margin-bottom: 12px;
+  background-color: green;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 .content {
   font-size: 18px;
@@ -30,8 +71,18 @@
 }
 @media screen and (max-width: 1200px) {
   .title {
-    width:100%;
+  width:100px;
 
+
+  }
+  .bar{
+    height: 4px;
+  width:200px;
+
+  
+    background-color: green;
+    padding-left: 12px;
+    padding-right: 12px;
   }
   .content {
 
@@ -42,5 +93,15 @@
 @media screen and (max-width: 991px) {
 
 
+  .infoBox{
+
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+  
+  .iconBox{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 
 }
