--- a/src/components/Section/ThemeSection.module.scss
+++ b/src/components/Section/ThemeSection.module.scss
@@ -23,16 +23,21 @@
   justify-content: flex-end;
   display: flex;
 }
+.websiteBottom {
+background-color: rgba(255,255,255,0.3);
+width: 50%;
+padding:12px;
+
+}
 .websiteName {
-  color: #ffffff;
+  color: #252525;
   font-weight: bold;
   font-size: 40px;
 }
 .websiteDesc {
-  color: #ffffff;
+  color: #252525;
   font-weight: bold;
   font-size: 22px;
-  width: 90%;
 }
 @media screen and (max-width: 991px) {
   .titleImg {
