--- a/src/components/Section/Home/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemListSection.module.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   justify-content: center;
   margin-top: 48px;
+  width: 100%;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -31,7 +32,28 @@
   margin-right: 32px;
   object-fit: contain;
 }
+.img{
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  width:  100%;
+  padding: 20px;
+  object-fit: cover;
+}
+.imgBoxColumm{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  margin-top: 48px;
+  width: 100%;
+}
+.imgBoxRow{
+  display: flex;
+  flex-direction: row;
+  margin-left: 10px;
+  margin-right: 10px;
 
+}
 @media screen and (max-width: 1554px) {
   .bottomBox {
     padding-left: 40px;
@@ -71,5 +93,8 @@
     flex: 1;
     padding-left: 12px;
     padding-right: 12px;
+  }
+  .imgBoxRow{
+    flex-direction: column;
   }
 }
