--- a/src/components/Display/DisplayCommon.module.scss
+++ b/src/components/Display/DisplayCommon.module.scss
@@ -66,6 +66,12 @@
   padding-right: 12px;
 }
 @media screen and (max-width: 997px) {
+  .infoBox {
+
+    margin-left:0px;
+    margin-right: 0px;
+
+  }
   .title {
     width: 100px;
   }
