--- a/src/components/Section/Home/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemListSection.module.scss
@@ -40,7 +40,7 @@
   width:  40%;
   padding: 20px;
   object-fit: cover;
-  cursor: pointer;
+ // cursor: pointer;
 }
 .imgBoxColumm{
   display: flex;
