--- a/src/components/Section/Service/HardwareRecycling/HardwareRecyclingSection.module.scss
+++ b/src/components/Section/Service/HardwareRecycling/HardwareRecyclingSection.module.scss
@@ -22,7 +22,7 @@
     z-index: 1;
   }
   
-  background-image: url('../../../assets/img/service/list.png');
+  background-image: url('../../../../assets/img/service/list.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
