--- a/src/components/Section/Home/ItemList/ItemPage/ItemPageSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemPage/ItemPageSection.module.scss
@@ -70,6 +70,8 @@
   color:#252525;
   font-size:48px;
  cursor: pointer;
+// z-index: 100;
+ display: flex;
   
 }
 @media screen and (max-width: 997px) {
