--- a/src/components/Section/Home/ItemList/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemListSection.module.scss
@@ -36,9 +36,8 @@
 .img{
   display: flex;
   flex-direction: column;
+  width:  100%;
   height: 350px;
-  width:  40%;
-  padding: 20px;
   object-fit: cover;
   cursor: pointer;
 }
@@ -55,6 +54,18 @@
   margin-right: 10px;
 
 
+}
+.imgBox{
+  width:  40%;
+
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.text{
+  font-size: 24px;
+  margin-top: 12px;
+  color:"#252525"
 }
 @media screen and (max-width: 997px) {
 
@@ -101,5 +112,13 @@
     width:  100%;
     padding: 20px;
     object-fit: cover;
+  }
+  .imgBox{
+    width:  100%;
+
+  
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
   }
 }
