--- a/src/components/Section/Home/ItemList/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemListSection.module.scss
@@ -14,6 +14,16 @@
   padding-left: 40px;
   padding-right: 40px;
 }
+.nonDisplay{
+  display: none;
+}
+.row{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+
+  flex:1;
+}
 .bottomTextRegular {
   letter-spacing: 2px;
   font-size: 20px;
@@ -61,11 +71,24 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .text{
   font-size: 24px;
   margin-top: 12px;
-  color:"#252525"
+  color:"#252525";
+  border: 2px solid #0f5e12;
+  border-radius: 12px;
+  min-height: 50px;
+  padding-top: 6px;
+  background-color: #ffffff;
+  cursor: pointer;
+  width: 100%;
+  min-width: 200px;
+  margin-left: 12px;
+  margin-right: 12px;
+ 
 }
 @media screen and (max-width: 997px) {
 
