--- a/src/components/Section/Home/ItemList/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemListSection.module.scss
@@ -74,6 +74,25 @@
   justify-content: center;
   align-items: center;
 }
+.tab{
+  font-size: 24px;
+  margin-top: 12px;
+  color:"#252525";
+  border: 2px solid #0f5e12;
+  border-radius: 12px;
+  min-height: 50px;
+  padding-top: 6px;
+  background-color: #ffffff;
+  cursor: pointer;
+  width: 100%;
+  min-width: 200px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+
+
+
 .text{
   font-size: 24px;
   margin-top: 12px;
@@ -131,17 +150,26 @@
   .img{
     display: flex;
     flex-direction: column;
-    height: 350px;
+    height: 150px;
     width:  100%;
     padding: 20px;
-    object-fit: cover;
+    object-fit: contain;
   }
   .imgBox{
     width:  100%;
 
   
-    padding: 20px;
+    padding: 0px;
     display: flex;
     flex-direction: column;
   }
+
+  .text{
+    font-size: 21px;
+    min-height: 0px;
+    padding-top: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
 }
