--- a/src/components/Button/ScrollToTopBtn.module.scss
+++ b/src/components/Button/ScrollToTopBtn.module.scss
@@ -5,6 +5,32 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #333;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+scale: 1.75;
+margin-right: 20px;
+margin-bottom: 20px;
+      &.show {
+        opacity: 1;
+      }
+    }
+  }
+
+  @media screen and (max-width: 997px) {
+  .btn {
+    position: relative;
+  
+    .scroll {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
@@ -20,3 +46,4 @@
       }
     }
   }
+}
