--- a/src/components/Button/ScrollToTopBtn.module.scss
+++ b/src/components/Button/ScrollToTopBtn.module.scss
@@ -40,7 +40,9 @@ margin-bottom: 20px;
       cursor: pointer;
       opacity: 0;
       transition: opacity 0.3s ease-in-out;
-  
+      scale: 1;
+      margin-right: 0px;
+margin-bottom: 0px;
       &.show {
         opacity: 1;
       }
