--- a/src/components/Section/Home/ItemList/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemListSection.module.scss
@@ -90,7 +90,27 @@
   margin-right: 12px;
 }
 
+.selectedTab{
 
+
+  font-size: 24px;
+  margin-top: 12px;
+  color:"#252525";
+  border: 2px solid #ffffff;
+  border-radius: 12px;
+  min-height: 50px;
+  padding-top: 6px;
+  background-color: #0f5e12;
+  cursor: pointer;
+  width: 100%;
+  color:#ffffff;
+  min-width: 200px;
+  margin-left: 12px;
+  margin-right: 12px;
+
+
+
+}
 
 
 .text{
@@ -173,7 +193,7 @@
     padding-top: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
-    width: 100%;
+    width: 200px;
 
   }
 
