--- a/src/components/Section/ThemeSection.module.scss
+++ b/src/components/Section/ThemeSection.module.scss
@@ -8,7 +8,7 @@
 }
 
 .margin {
-  background-color: rgb(214, 253, 214,0.2);
+  background-color: rgb(214, 253, 214, 0.2);
 }
 .imgSize {
   width: "100%";
@@ -16,7 +16,7 @@
 }
 .websiteBox {
   flex-direction: column;
-  padding-left: 60px;
+  padding-left: 30px;
   padding-top: 20px;
   padding-bottom: 20px;
   height: 400px;
@@ -24,10 +24,8 @@
   display: flex;
 }
 .websiteBottom {
-background-color: rgba(255,255,255,0.3);
-width: 50%;
-padding:12px;
-
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 12px;
 }
 .websiteName {
   color: #252525;
@@ -41,8 +39,8 @@ padding:12px;
 }
 @media screen and (max-width: 997px) {
   .titleImg {
-  background-position: 0px 50px;
-  height: 300px;
+    background-position: 0px 50px;
+    height: 300px;
   }
   .websiteBox {
     height: 300px;
