--- a/src/components/Section/InnerSection.module.scss
+++ b/src/components/Section/InnerSection.module.scss
@@ -3,4 +3,20 @@
   flex-direction: column;
   padding-top:48px;
   padding-bottom: 48px;
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+
+@media screen and (max-width: 1366px) {
+  .margin {
+    display: flex;
+    flex-direction: column;
+    padding-top:48px;
+    padding-bottom: 48px;
+    padding-left: 100px;
+    padding-right: 100px;
+  }
+  
+  
 }
