--- a/src/components/Section/SectionCommon.module.scss
+++ b/src/components/Section/SectionCommon.module.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   padding-left: 48px;
-  padding-right: 48px
-  ;
+  padding-right: 48px;
+ 
 }
 .section {
   text-align: center;
