--- a/src/components/Section/Service/HardwareRecycling/HardwareRecyclingSection.module.scss
+++ b/src/components/Section/Service/HardwareRecycling/HardwareRecyclingSection.module.scss
@@ -21,8 +21,9 @@
     background-color: rgba(255, 255, 255,0.4);
     z-index: 1;
   }
+  background-color: rgba(86, 164, 86,0.2);
   
-  background-image: url('../../../../assets/img/service/list.png');
+  //background-image: url('../../../../assets/img/service/list.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
