--- a/src/components/Section/InnerSection.module.scss
+++ b/src/components/Section/InnerSection.module.scss
@@ -20,3 +20,15 @@
   
   
 }
+@media screen and (max-width: 500px) {
+  .margin {
+    display: flex;
+    flex-direction: column;
+    padding-top:48px;
+    padding-bottom: 48px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  
+  
+}
