--- a/src/components/Section/Service/HardwareRecycling/HardwareRecyclingSection.module.scss
+++ b/src/components/Section/Service/HardwareRecycling/HardwareRecyclingSection.module.scss
@@ -57,3 +57,10 @@
   padding-right: 24px;
  
 }
+
+@media screen and (max-width: 1066px) {
+  .section{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+}
