--- a/src/components/Display/DisplayCommon.module.scss
+++ b/src/components/Display/DisplayCommon.module.scss
@@ -7,7 +7,9 @@
   margin-right: 12px;
   border-radius: 12px;
   padding-top: 24px;
-  padding-bottom: 24px;width: auto;
+  padding-bottom: 24px;
+
+
 }
 
 .iconBox {
