--- a/src/components/Section/Home/ItemList/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemListSection.module.scss
@@ -1,4 +1,5 @@
 .margin {
+
 }
 .infoBoxes{
   display: flex;
@@ -10,8 +11,8 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 .nonDisplay{
   display: none;
@@ -76,11 +77,10 @@
   font-size: 24px;
   margin-top: 12px;
   color:"#252525";
-  border: 2px solid #0f5e12;
-  border-radius: 12px;
+  background-color: rgba(86, 164, 86, 0.1);
+  border-radius: 8px;
   min-height: 50px;
   padding-top: 6px;
-  background-color: #ffffff;
   cursor: pointer;
   width: 100%;
   min-width: 200px;
@@ -89,19 +89,19 @@
 }
 
 .selectedTab{
+  border: 2px solid #0f5e12;
 
 
   font-size: 24px;
   margin-top: 12px;
   color:"#252525";
-  border: 2px solid #ffffff;
-  border-radius: 12px;
+  border-radius: 8px;
   min-height: 50px;
   padding-top: 6px;
-  background-color: #0f5e12;
+
   cursor: pointer;
   width: 100%;
-  color:#ffffff;
+  color:#252525;
   min-width: 200px;
   margin-left: 12px;
   margin-right: 12px;
@@ -115,13 +115,11 @@
   font-size: 24px;
   margin-top: 12px;
   color:"#252525";
-  border: 2px solid #0f5e12;
-  border-radius: 12px;
+  background-color: rgba(86, 164, 86, 0.1);
+  border-radius: 8px;
   min-height: 50px;
   padding-top: 6px;
-  background-color: #ffffff;
   cursor: pointer;
-  width: calc(var(--window-width) * 0.24);
   margin-left: 12px;
   margin-right: 12px;
   padding-left: 8px;
@@ -136,8 +134,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     justify-content: center;
   }
   .bottomTextRegular {
@@ -151,7 +149,7 @@
     flex: 1;
   }
   .bottomBox {
-    padding-left: 0px;
+    padding-left: 20px;
     padding-right: 0px;
   }
   .bottomTextRegular {
@@ -171,8 +169,6 @@
   .img{
     display: flex;
     flex-direction: column;
-    height: 150px;
-    width:  100%;
     padding: 20px;
     object-fit: contain;
   }
