--- a/src/components/Section/Home/ItemList/ItemListSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemListSection.module.scss
@@ -61,17 +61,18 @@
   flex-direction: row;
   margin-left: 10px;
   margin-right: 10px;
-
-
+align-items: flex-end;justify-content: center;
 }
 .imgBox{
-  width:  40%;
-
+  width:  40%;height: 100%;
+  background-color: rgba(86, 164, 86, 0.1);
   padding: 20px;
+  margin: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  border-radius: 12px;
 }
 .tab{
   font-size: 24px;
@@ -115,7 +116,6 @@
   font-size: 24px;
   margin-top: 12px;
   color:"#252525";
-  background-color: rgba(86, 164, 86, 0.1);
   border-radius: 8px;
   min-height: 50px;
   padding-top: 6px;
@@ -176,7 +176,6 @@
     width:  100%;
 
   
-    padding: 0px;
     display: flex;
     flex-direction: column;
   }
