--- a/src/components/Section/Home/ItemList/ItemPage/ItemPageSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemPage/ItemPageSection.module.scss
@@ -25,14 +25,18 @@
   width: 100%;
 }
 .box {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
   margin-top: 48px;
   width: 100%;
-  padding-left: 40px;
-  padding-right: 40px;
+
+
+
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 0px;
+  padding-right: 0px;
+  justify-content: center;
 }
 .mainImg {
   display: flex;
@@ -56,14 +60,19 @@
 }
 
 .infoBox {
-  margin-left: 40px;
-  margin-right: 40px;
+
+
+  margin-top: 48px;
+
+
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
+
+
+
 }
 .smallImg {
   width: 100%;
@@ -94,7 +103,21 @@
  display: flex;
   
 }
+.column{
+  display: flex;
+  flex-direction: column;
+  margin-left: 24px;
+flex:1  
+}
+.insideBox{
+  margin-left: 24px;
+  flex-direction: row; display: flex;
+}
 @media screen and (max-width: 997px) {
+  .insideBox{
+margin-top: 24px;
+    flex-direction: column; display: flex;
+  }
   .label{text-align: center;
   }
   .labelClick{
@@ -109,7 +132,7 @@
     display: flex;
     height: 100%;
     width: 100%;
-  
+  margin-bottom: 36px;
     object-fit: contain;
    cursor: pointer;
   }
