--- a/src/components/Section/Home/ItemList/ItemPage/ItemPageSection.module.scss
+++ b/src/components/Section/Home/ItemList/ItemPage/ItemPageSection.module.scss
@@ -114,8 +114,13 @@ flex:1
   flex-direction: row; display: flex;
 }
 @media screen and (max-width: 997px) {
+  .column{
+    margin-left: 0px;
+  }
   .insideBox{
 margin-top: 24px;
+margin-left: 0px;
+
     flex-direction: column; display: flex;
   }
   .label{text-align: center;
@@ -174,7 +179,6 @@ margin-bottom: 12px;
   .infoBox {
     margin-top: 48px;
 
-    margin-left: 48px;
     width: 100%;
     height: 100%;
     display: flex;
